# agent-black-box

./: .gitignore  AGENT_BLACK_BOX_BUILD_PLAN.md  README.md  abb.py  pyproject.toml
.github/ISSUE_TEMPLATE/: alpha_feedback.yml  config.yml  design_partner_application.yml
.github/workflows/: ci.yml
docs/: AGENT_INTEGRATION_PROMPT.md  ALPHA_RELEASE_NOTES.md  API_REFERENCE.md  DEMO_TRANSCRIPT.md  DESIGN_PARTNER_FEEDBACK_FORM.md  DESIGN_PARTNER_FIRST_SEND_PACKET.md  DESIGN_PARTNER_HANDOFF.md  DESIGN_PARTNER_INTAKE.csv  DESIGN_PARTNER_INTAKE.md  DESIGN_PARTNER_OUTREACH.md  DESIGN_PARTNER_TRACKER.csv  DESIGN_PARTNER_TRACKER.md  FIRST_USER_WORKFLOW.md  KNOWN_LIMITATIONS.md  LOCAL_ALPHA_CHECKLIST.md  PUBLIC_DESIGN_PARTNER_CALL.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  index.html
examples/: basic_agent.py  http_agent_client.py  js-agent-client.mjs  langchain_callback_agent.py  langgraph_node_agent.py  openai_wrapper_agent.py  tool_call_agent.py
scripts/: alpha-demo.sh  browser-smoke.py  build-release.py  dev-install.sh  feedback-summary.py  http-client-smoke.py  prepare-design-partner-send.py  rank-design-partners.py  release-readiness.py  smoke.sh
src/agent_black_box/: __init__.py  agent_kit.py  api_manifest.py  cli.py  daemon.py  diff.py  handoff.py  ids.py  openai.py  proxy.py  redaction.py  replay.py  sdk.py  storage.py  usage.py
src/agent_black_box/adapters/: __init__.py  langchain.py  langgraph.py  tools.py
tests/: test_storage.py
